clusters/single-node/applications/whoami-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-demo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami-demo
  template:
    metadata:
      labels:
        app: whoami-demo
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:v1.10.3
          ports:
            - containerPort: 80
