clusters/single-node/applications/whoami-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-demo
  namespace: default
spec:
  selector:
    app: whoami-demo
  ports:
    - port: 80
      targetPort: 80
