clusters/single-node/applications/whoami-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-demo
  namespace: default

spec:
  ingressClassName: traefik

  rules:
    - host: whoami.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-demo
                port:
                  number: 80
